Tue Sep 21 07:06:01 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_visitor_component/context_svh.cpp:
        * TAO_IDL/be/be_visitor_component/context_svs.cpp:
          For the moment generate the instance id again as part of the context

Tue Sep 21 06:42:42 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_interface.cpp:
        * TAO_IDL/be/be_provides.cpp:
          Removed generation for EntityContext, we don't support Entity at
          all

Mon Sep 20 15:27:54 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * tao/ImR_Client/ImR_Client.mpc:

          Updated lists of Header and Include Files for install.

Mon Sep 20 14:48:01 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * tao/TransportCurrent/TC.mpc:
        * tao/TransportCurrent/TC_IIOP.mpc:

          *C.inl files are no longer generated.

Mon Sep 20 13:52:02 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_codegen.cpp:
          Updated generated includes

Mon Sep 20 13:19:19 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_codegen.cpp:
        * TAO_IDL/be/be_visitor_component/context_svh.cpp:
        * TAO_IDL/be/be_visitor_component/context_svs.cpp:
          Updated includes and for the fact that we now talk about SessionContext

Mon Sep 20 11:54:13 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * tests/IDL_Test/interface.idl:
          Fuzz (trailing space).

Mon Sep 20 11:42:58 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_visitor_component/component_ex_idl.cpp:
          Don't generate typedef of the context, not needed at all

Mon Sep 20 10:46:39 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_codegen.cpp:
          AMI4CCM doesn't need to access container/context internals

Mon Sep 20 09:32:40 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * tests/Bug_3042_Regression/test.idl: