@@ -2,5 +2,5 @@
 // $Id$
 
 project : orbsvcsexe, lifecycle_skel, naming, trading_serv, avoids_minimum_corba, utils, install {
-  exename  = LifeCycle_Service
+  exename  = tao_coslifecycle
 }
